MCR-5452: Fix d-snp rate question spacing (#3601)
* Fix CSS linting issues

* Fix CSS linting issues

* Fix stylingof summary section and child list items.

* Fix state contacts to display in 2 columns

* Use summarySection style like other sections. Fixes previous submission top margin.

* Fix spacing for document table headings.

--- a/services/app-web/src/components/SubmissionSummarySection/UploadedDocumentsTable/UploadedDocumentsTable.module.scss
+++ b/services/app-web/src/components/SubmissionSummarySection/UploadedDocumentsTable/UploadedDocumentsTable.module.scss
@@ -27,6 +27,7 @@
 .supportingDocsEmpty {
     text-align: center;
     padding: 1rem;
+    margin-bottom: 1rem;
 }
 
 .captionContainer {
@@ -66,4 +67,8 @@ h5 {
     :first-child {
         margin-right: 5px;
     }
+}
+
+.withMarginTop {
+    margin-top: 1rem;
 }
